修改定投文字

--- a/app/src/pages/notice/NoticeDetail.scss
+++ b/app/src/pages/notice/NoticeDetail.scss
@@ -6,3 +6,15 @@
   width: 100%;
   height: 100vh;
 }
+
+.notice-detail {
+  box-sizing: border-box;
+  padding-top: $header-height;
+
+  .htmlContent {
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  }
+}
