--- a/app/src/pages/home/Generalize.scss
+++ b/app/src/pages/home/Generalize.scss
@@ -1,4 +1,4 @@
-@import "../../styles/mixin";
+@import '../../styles/mixin';
 
 #generalize {
   box-sizing: border-box;
@@ -6,7 +6,7 @@
   background: rgba(247, 247, 248, 1);
 
   .section-banner {
-    background: url("../../assets/images/generalize-banner.png") center;
+    background: url('../../assets/images/generalize-banner.png') center;
     background-size: cover;
     color: $white;
 
@@ -34,7 +34,11 @@
 
         width: 14.9rem;
         height: 6.9rem;
-        background: linear-gradient(315deg, rgba(68, 136, 243, 1) 0%, rgba(120, 186, 254, 1) 100%);
+        background: linear-gradient(
+          315deg,
+          rgba(68, 136, 243, 1) 0%,
+          rgba(120, 186, 254, 1) 100%
+        );
         border-radius: 6px;
         font-size: 3rem;
 
@@ -122,7 +126,7 @@
           height: 6rem;
           border-radius: 50%;
           box-shadow: 0 1px 22px 0 rgba(0, 0, 0, 0.1);
-          font-size: $font-title;
+          font-size: $font-context;
           font-weight: 500;
         }
 
