--- a/app/src/pages/notice/NoticeDetail.scss
+++ b/app/src/pages/notice/NoticeDetail.scss
@@ -1,15 +1,10 @@
 @import '../../styles/_common';
 
-#iframe-notice {
-  box-sizing: border-box;
-  padding-top: $header-height;
-  width: 100%;
-  height: 100vh;
-}
-
 .notice-detail {
   box-sizing: border-box;
   padding-top: $header-height;
+  padding-left: 15px;
+  padding-right: 15px;
 
   .htmlContent {
     img {
