--- a/app/src/pages/user/UserCenter.scss
+++ b/app/src/pages/user/UserCenter.scss
@@ -59,21 +59,14 @@
           width: 6rem;
         }
 
-        .certification {
+        .auth-btn {
           @include clearButton;
           width: 8.5rem;
           color: $white;
           border-radius: 5px;
           box-sizing: border-box;
           padding: 7px 10px;
-
-          &.nttc {
-            @include background-gradient($primary-color-gradient, $primary-color);
-          }
-
-          &.xc {
-            @include background-gradient(#ff9665, $warn-color);
-          }
+          @include background-gradient($primary-color-gradient, $primary-color);
         }
 
         ul {
