--- a/app/src/pages/home/Generalize.scss
+++ b/app/src/pages/home/Generalize.scss
@@ -6,7 +6,6 @@
   background: rgba(247, 247, 248, 1);
 
   .section-banner {
-    background: url('../../assets/images/generalize-banner.png') center;
     background-size: cover;
     color: $white;
 
@@ -34,11 +33,7 @@
 
         width: 14.9rem;
         height: 6.9rem;
-        background: linear-gradient(
-          315deg,
-          rgba(68, 136, 243, 1) 0%,
-          rgba(120, 186, 254, 1) 100%
-        );
+        background: $generalize-linear-gradient;
         border-radius: 6px;
         font-size: 3rem;
 
