--- a/app/src/styles/_variable-mmt.scss
+++ b/app/src/styles/_variable-mmt.scss
@@ -3,23 +3,11 @@ $black: #000;
 $black-border-bottom: rgba(0, 0, 0, 0.2);
 $black-font-primary: #636875;
 $white: #fff;
-$red: #f44;
-$blue: #1989fa;
-$orange: #ff976a;
-$orange-dark: #ed6a0c;
-$orange-light: #fffbe8;
-$green: #07c160;
-$gray: #c8c9cc;
-$gray-light: #e5e5e5;
-$gray-darker: #7d7e80;
-$gray-dark: #969799;
-$bg-btn-disabled: #a1a4ac;
 
 /* Default colors */
 $primary-color: #2594A5; // 主题色
-$assistant-color:#2A76DD; // 辅助色
-//$primary-color-gradient: #3a438ef5; // 蓝色渐变
-$primary-color-gradient: #e8713a;
+$assistant-color: #9ac9d2; // 辅助色
+$primary-color-gradient: #3a438ef5; // 渐变
 
 $succeed-color: #29b056; // 通过、成功
 $warn-color: #fa8100; // 提醒、警告
@@ -48,10 +36,10 @@ $font-title-xl: 2.8rem; // 大标题
 
 /* Font family */
 $font-style-cn: PingFangSC-Regular, PingFang SC, Hiragino Sans GB, Arial,
-  sans-serif;
+sans-serif;
 $font-style-en: PingFangSC-Light, PingFang SC, Arial, sans-serif;
 $font-regular: PingFangSC-Regular, PingFang SC, Hiragino Sans GB, Arial,
-  sans-serif;
+sans-serif;
 $font-serif: SimSun, '宋体', serif;
 
 /* Space width */
@@ -64,3 +52,6 @@ $box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.1);
 $border-radius: 4px;
 $header-height: 44px;
 $footer-height: 49px;
+
+/* business */
+$generalize-linear-gradient: linear-gradient(138deg, rgba(97, 187, 198, 1) 0%, rgba(103, 195, 206, 1) 100%);
