--- a/app/src/styles/mixin.scss
+++ b/app/src/styles/mixin.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
-//@import './_variable-xc';
- @import './_variable-nttc';
+@import './_variable-xc';
+ //@import './_variable-nttc';
  //@import './_variable-mmt';
 
 /*超行溢出显示省略号*/
