修改首页图片

--- a/app/src/components/common/NoData.scss
+++ b/app/src/components/common/NoData.scss
@@ -6,8 +6,9 @@
   color: $text-sub-color;
 
   img {
-    width: 9.9rem;
-    height: 6.5rem;
+    width: 11.2rem;
+    //width: 9.9rem;
+    //height: 6.5rem;
     margin-bottom: 14px;
   }
 }
