--- a/app/src/styles/_variable-mmt.scss
+++ b/app/src/styles/_variable-mmt.scss
@@ -55,3 +55,6 @@ $footer-height: 49px;
 
 /* business */
 $generalize-linear-gradient: linear-gradient(138deg, rgba(97, 187, 198, 1) 0%, rgba(103, 195, 206, 1) 100%);
+$bargain-banner-bg: linear-gradient(90deg, #333844 0%, #677089 100%);
+$bargain-banner-btn-bg: linear-gradient(90deg, rgba(0, 172, 245, 1) 0%, rgba(0, 132, 254, 1) 100%);
+$bargain-banner-btn-color: $white;
