--- a/app/src/styles/_variable-nttc.scss
+++ b/app/src/styles/_variable-nttc.scss
@@ -59,3 +59,6 @@ $generalize-linear-gradient: linear-gradient(
     rgba(68, 136, 243, 1) 0%,
     rgba(120, 186, 254, 1) 100%
 );
+$bargain-banner-bg: linear-gradient(90deg, #333844 0%, #677089 100%);
+$bargain-banner-btn-bg: linear-gradient(90deg, rgba(0, 172, 245, 1) 0%, rgba(0, 132, 254, 1) 100%);
+$bargain-banner-btn-color: $white;
