--- a/app/src/pages/home/Bargain.scss
+++ b/app/src/pages/home/Bargain.scss
@@ -58,7 +58,8 @@
       box-sizing: border-box;
       padding: 15px 10px;
       border-radius: 5px;
-      background: url('../../assets/images/bargain-banner.png') center;
+      background: $bargain-banner-bg;
+      // background: url('../../assets/images/bargain-banner.png') center;
       background-size: cover;
       line-height: 1.8;
       color: $white;
@@ -77,17 +78,12 @@
 
       button {
         @include clearButton;
-        //position: absolute;
-        //top: 0;
-        //right: 20px;
-        //bottom: 0;
-        //margin: auto;
-
         width: 6rem;
         height: 3rem;
-        background: linear-gradient(90deg, rgba(0, 172, 245, 1) 0%, rgba(0, 132, 254, 1) 100%);
+        background: $bargain-banner-btn-bg;
         border-radius: 5px;
         font-size: $font-context;
+        color: $bargain-banner-btn-color;
       }
     }
 
