--- a/app/src/styles/_variable-xc.scss
+++ b/app/src/styles/_variable-xc.scss
@@ -37,10 +37,10 @@ $font-title-xl: 2.8rem; // 大标题
 
 /* Font family */
 $font-style-cn: PingFangSC-Regular, PingFang SC, Hiragino Sans GB, Arial,
-  sans-serif;
+sans-serif;
 $font-style-en: PingFangSC-Light, PingFang SC, Arial, sans-serif;
 $font-regular: PingFangSC-Regular, PingFang SC, Hiragino Sans GB, Arial,
-  sans-serif;
+sans-serif;
 $font-serif: SimSun, '宋体', serif;
 
 /* Space width */
@@ -56,7 +56,10 @@ $footer-height: 49px;
 
 /* business */
 $generalize-linear-gradient: linear-gradient(
-    315deg,
-    rgba(68, 136, 243, 1) 0%,
-    rgba(120, 186, 254, 1) 100%
+    90deg,
+    #ff9d72 0%,
+    #fd773d 100%
 );
+$bargain-banner-bg: linear-gradient(90deg, #D74B0A 0%, #FCA37A 100%);
+$bargain-banner-btn-bg: $white;
+$bargain-banner-btn-color: $primary-color;
