--- a/app/src/components/partial/VerifiedCode.scss
+++ b/app/src/components/partial/VerifiedCode.scss
@@ -18,6 +18,29 @@
       display: inline-block;
       margin-top: 3rem;
 
+      &.account {
+        input {
+          box-sizing: border-box;
+          padding-left: 60px;
+        }
+
+        span {
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          margin: auto;
+          width: 60px;
+
+          display: flex;
+          align-items: center;
+
+          svg{
+            margin-left: 3px;
+            color: #444;
+          }
+        }
+      }
+
       .input-main {
         width: 100%;
         outline: none;
