--- a/app/src/pages/wallet/Withdraw.scss
+++ b/app/src/pages/wallet/Withdraw.scss
@@ -107,7 +107,7 @@ $text-sub-color: #ABABAB;
 
       small {
         display: flex;
-        justify-content: flex-end;
+        justify-content: space-between;
         padding: 9px 0;
         color: $text-sub-color;
       }
