--- a/app/src/pages/wallet/Withdraw.scss
+++ b/app/src/pages/wallet/Withdraw.scss
@@ -7,7 +7,6 @@ $text-sub-color: #ABABAB;
   box-sizing: border-box;
   min-height: 100vh;
   padding-top: $header-height;
-  //font-family: $font-regular;
   font-weight: 600;
 
   header {
@@ -75,6 +74,7 @@ $text-sub-color: #ABABAB;
             left: 0;
             z-index: 1;
             opacity: 0;
+            width: 100%;
           }
         }
 
